--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="right">You are right :)</string>
     <string name="wrong">You are wrong :(</string>
     <string name="settings">Settings</string>
-    <string name="back">back</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="statistics">Statistics</string>
 </resources>
