--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="statistics">Statistics</string>
+    <string name="all_read">All news read</string>
+    <string name="all_answered">All questions answered</string>
+    <string name="answered_right">Answered right</string>
+    <string name="favorit_topic">Favorit topic</string>
 </resources>
