--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="answered_right">Отвечено правильно</string>
     <string name="favorit_topic">Любимая категория</string>
     <string name="question">Какая деталь была пропущена?</string>
+    <string name="already_answered">Вопрос уже был отвечен.</string>
 </resources>
