Add no-connection placeholder

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="favorit_topic">Любимая категория</string>
     <string name="question">Какая деталь была пропущена?</string>
     <string name="already_answered">Вопрос уже был отвечен.</string>
+    <string name="no_connection">Нет соединения</string>
 </resources>
